--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-livekit-agents[hedra]~=1.3
-livekit-plugins-openai~=1.0
-python-dotenv
+livekit-agents>=1.0
+livekit-plugins-openai
+livekit-plugins-elevenlabs
+livekit-plugins-hedra
 livekit-plugins-silero
+python-dotenv
